Change assembly name, handle case when input is too large to calculate actual value

--- a/Algorithms/IntegerMultiplication.csproj
+++ b/Algorithms/IntegerMultiplication.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E76F7F6F-F098-4B41-922E-68D321D4E48D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Algorithms</RootNamespace>
-    <AssemblyName>Algorithms</AssemblyName>
+    <AssemblyName>IntegerMultiplication</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
